Inventory has been updated

--- a/inventory.ini
+++ b/inventory.ini
@@ -11,7 +11,7 @@ etcd
 
 [nodes]
 10.160.0.3 openshift_ip=10.160.0.3 openshift_schedulable=true openshift_node_group_name="node-config-all-in-one"
-10.160.0.4 openshift_ip=10.160.0.4 openshift_schedulable=true openshift_node_group_name="node-config-all-in-one"
+#10.160.0.4 openshift_ip=10.160.0.4 openshift_schedulable=true openshift_node_group_name="node-config-all-in-one"
 10.160.0.5 openshift_ip=10.160.0.5 openshift_schedulable=true openshift_node_group_name="node-config-all-in-one"
 
 [OSEv3:vars]
